Fix window list background color in dark mode

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -92,3 +92,12 @@ entry.rounded {
 	border-radius: 9999px;
 	padding-right: 12px;
 }
+
+/* Window lists */
+listview.card-list {
+	background-color: transparent;
+}
+
+columnview.card-list {
+	background-color: transparent;
+}
